Fix syncing of number of payments and last payment date

BUG: 452497
FIXED-IN: 5.1.3